# nfc-sockets

./: LICENSE.txt
android/NFCSockets/app/: build.gradle
android/NFCSockets/app/src/main/: AndroidManifest.xml
android/NFCSockets/app/src/main/assets/: request_failed.html
android/NFCSockets/app/src/main/java/com/classycode/nfcsockets/: Constants.java  NFCSocketActivity.java  NFCSocketApduService.java  NFCSocketApplication.java  NFCSocketFragment.java  SSHFragment.java  SimpleIOFragment.java  SocketEventBus.java  WebFragment.java
android/NFCSockets/app/src/main/java/com/classycode/nfcsockets/http/: OkHttpWebViewClient.java
android/NFCSockets/app/src/main/java/com/classycode/nfcsockets/jsch/: SSHCommandExecutor.java
android/NFCSockets/app/src/main/java/com/classycode/nfcsockets/messages/: Close.java  CloseResponse.java  Connect.java  ConnectResponse.java  KeepAliveMessage.java  LinkTerminateMessage.java  Message.java  NFCMessage.java  Recv.java  RecvResponse.java  Send.java  SendResponse.java  SocketMessage.java  SocketRequest.java  SocketResponse.java
android/NFCSockets/app/src/main/java/com/classycode/nfcsockets/minidns/: NFCDnsSource.java
android/NFCSockets/app/src/main/res/layout/: activity_nfc_sockets.xml  fragment_simple_io.xml  fragment_ssh.xml  fragment_web.xml
android/NFCSockets/app/src/main/res/values/: strings.xml
android/NFCSockets/app/src/main/res/xml/: nfc_socket_aid.xml
pn532_socket_tunnel/: .gitignore  CMakeLists.txt  messages.c  messages.h  pn532_socket_tunnel.c  socket_infos.c  socket_infos.h
testdata/: page.html
(+9 files in other folders)
